--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
-    "pack": "webpack --config webpack.config.js",
+    "pack": "webpack-cli --config webpack.config.js",
     "babel": "babel src -d dist",
     "build": "npm run pack && npm run babel"
   },
