--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack-dev-server --mode development",
     "pack": "webpack --config webpack.config.js",
     "babel": "babel src -d dist",
+    "pretty": "prettier --write \"./**/*.{js,jsx,json,css}\"",
     "build": "npm run pack && npm run babel"
   },
   "author": "",
@@ -16,6 +17,7 @@
     "aws-sdk": "^2.395.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-dom-confetti": "^0.1.1",
     "react-loadable": "^5.5.0",
     "styled-components": "^4.1.3"
   },
@@ -32,6 +34,7 @@
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.18.2",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.28.4",
