--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
-    "pack": "webpack --config webpack.config.js",
-    "babel": "babel src -d dist",
     "pretty": "prettier --write \"./**/*.{js,jsx,json,css}\"",
-    "build": "npm run pack && npm run babel"
+    "build": "./node_modules/.bin/webpack --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
